update python version requirements

--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -5,8 +5,8 @@ title: Installation
 
 ## Requirements
 
-Ax requires Python 3.10 or newer. A full list of Ax's direct dependencies can be
-found in [setup.py](https://github.com/facebook/Ax/blob/main/setup.py).
+Ax requires Python 3.11 or newer. A full list of Ax's direct dependencies can be
+found in [pyproject.toml](https://github.com/facebook/Ax/blob/main/pyproject.toml).
 
 ## Installing Ax (stable)
 
